Prevent overflowing versioning cell (#3874)

--- a/src/stylesheets/modules/field-editors/rich_text.styl
+++ b/src/stylesheets/modules/field-editors/rich_text.styl
@@ -249,7 +249,7 @@
     display: inline;
     position: static;
     a
-     font-size: 16px;
+     font-size: inherit;
 
 
   .rich-text__hyperlink
