--- a/src/stylesheets/modules/snapshots.styl
+++ b/src/stylesheets/modules/snapshots.styl
@@ -95,6 +95,7 @@
 
 .snapshot-comparator__cell,
 .snapshot-comparator__header-cell
+  max-width: 50%
   display: flex
   flex-grow: 1
   flex-basis: 0
@@ -150,6 +151,7 @@
     flex-grow: 1
     padding: 4em
     padding-left: 0
+    max-width: calc(100% - 4em);
 
 .snapshot-comparator__field-title
   color: $colors.text-light
