--- a/src/stylesheets/workbench/index.styl
+++ b/src/stylesheets/workbench/index.styl
@@ -47,6 +47,7 @@ $workbench-middle-width = 100% - (2 * $workbench-sidebar-width)
     $workbench-content()
 
   &.x--content-full-size
+    overflow-x: hidden
     display: block
     overflow-y: auto
     position: relative
